--- a/src/components/foo-component.pug
+++ b/src/components/foo-component.pug
@@ -1,4 +1,4 @@
-mixin foo-component
-  .foo-component&attributes(attributes)
+component foo-component
+  .foo-component
     p this is foo-component
     block
