めっちゃ適当なscoped css

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -22,8 +22,11 @@ html(lang="en")
       +baz-component.page-index__baz
         +baz-closure
 
-    //- style
-      :scoped:scss
+    style
+      :scoped-css
         .page-index {
           color: red;
+        }
+        .page-index__foo:hover {
+          opacity: 0.5;
         }
