--- a/src/components/foo-component.pug
+++ b/src/components/foo-component.pug
@@ -2,3 +2,8 @@ mixin foo-component
   .foo-component
     p this is foo-component
     block
+
+style(scoped).
+  .foo-component {
+    color: blue;
+  }
