--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -22,11 +22,10 @@ html(lang="en")
       +baz-component.page-index__baz
         +baz-closure
 
-    style
-      :scoped-css
-        .page-index {
-          color: red;
-        }
-        .page-index__foo:hover {
-          opacity: 0.5;
-        }
+style.
+  .page-index {
+    color: red;
+  }
+  .page-index__foo:hover {
+    opacity: 0.5;
+  }
